<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardShareScreen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_margin="@dimen/_20sdp"
            app:cardBackgroundColor="#CEE6FD"
            app:cardCornerRadius="@dimen/_20sdp"
            app:strokeWidth="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:alpha="0.7"
                    android:elevation="0dp"
                    android:src="@drawable/share_screen_svg" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardBackgroundColor="#E61976D2"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/txtshareTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alfa_slab_one"
                            android:text="@string/share_screen"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alatsi"
                            android:text="@string/share_screen_subtitle"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_8sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/txtshareTitle" />


                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="@dimen/_70sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="0dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/start" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/remoteScreen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:cardBackgroundColor="#F3BC84"

            app:cardCornerRadius="@dimen/_20sdp"
            app:strokeWidth="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:alpha="0.7"
                    android:elevation="0dp"
                    android:src="@drawable/partner_svg" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="@dimen/_10sdp"
                    app:cardBackgroundColor="#F2EC9504"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/txtshareTitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alfa_slab_one"
                            android:text="@string/remote_screen"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alatsi"
                            android:text="@string/remote_screen_subtitle"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_8sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/txtshareTitle" />


                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="@dimen/_70sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="0dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/start" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


            </FrameLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</ScrollView>